kubernetes/rnd/couchpotato.yml
---
apiVersion: v1
kind: Service
metadata:
  name: couchpotato
  labels:
    app: couchpotato
spec:
  selector:
    app: couchpotato
  ports:
    - port: 5050
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: couchpotato
  labels:
    app: couchpotato
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: couchpotato
    spec:
      securityContext:
        fsGroup: 5001
      containers:
        - name: couchpotato
          image: "linuxserver/couchpotato"
          ports:
            - containerPort: 5050
          volumeMounts:
            - name: couchpotato-data
              mountPath: /config/data
            - name: couchpotato-config
              mountPath: /config/config.ini
            - name: couchpotato-downloads
              mountPath: /downloads
      volumes:
        - name: couchpotato-data
          hostPath:
            path: /srv/configs/couchpotato
        - name: couchpotato-config
          hostPath:
            path: /srv/configs/couchpotato/config.ini
        - name: couchpotato-downloads
          hostPath:
            path: /srv/seedbox
