kubernetes/rnd/etcd-daemonset.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: etcd
  name: etcd
spec:
  clusterIP: None
  ports:
    - port: 2379
      name: etcd-client
      targetPort: etcd-client
    - port: 2380
      name: etcd-peers
      targetPort: etcd-peers
  selector:
    daemon: etcd
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: etcd
  labels:
    app: etcd
spec:
  template:
    metadata:
      name: etcd
      labels:
        daemon: etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:v2.3.7
        imagePullPolicy: Always
        ports:
        - name: etcd-peers
          containerPort: 2380
        - name: etcd-client
          containerPort: 2379
        volumeMounts:
        - name: etcd-data
          mountPath: /var/lib/etcd
        - name: ca-certificates
          mountPath: /etc/ssl/certs
      volumes:
      - name: etcd-data
        emptyDir: {}
      - name: ca-certificates
        hostPath:
          path: /usr/share/ca-certificates/
