kubernetes/rnd/nginx-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      name: https
      targetPort: 443
