kubernetes/rnd/traefik-etcd.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: traefik-etcd
  name: traefik-etcd
  namespace: kube-system
spec:
  clusterIP: None
  ports:
    - port: 2379
      name: etcd-client
      targetPort: etcd-client
    - port: 2380
      name: etcd-peers
      targetPort: etcd-peers
  selector:
    k8s-app: traefik-etcd
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: kube-system
  name: traefik-etcd
  labels:
    k8s-app: traefik-etcd
spec:
  serviceName: "traefik-etcd"
  replicas: 3
  template:
    metadata:
      name: traefik-etcd
      labels:
        k8s-app: traefik-etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:v3.1.1
        imagePullPolicy: Always
        ports:
        - name: etcd-peers
          containerPort: 2380
        - name: etcd-client
          containerPort: 2379
        volumeMounts:
        - name: etcd-data
          mountPath: /var/lib/etcd
        - name: ca-certificates
          mountPath: /etc/ssl/certs
      volumes:
      - name: etcd-data
        emptyDir: {}
      - name: ca-certificates
        hostPath:
          path: /usr/share/ca-certificates/
