kubernetes/rnd/jenkins-all.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: default
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: jenkins
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - port: 8080
      name: http
    - port: 50000
      name: agent
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: jenkins.archifleks.net
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
