kubernetes/rnd/sickrage.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sickrage
  labels:
    app: sickrage
spec:
  selector:
    app: sickrage
  ports:
    - port: 8081
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sickrage
  labels:
    app: sickrage
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: sickrage
    spec:
      securityContext:
        fsGroup: 5001
      containers:
        - name: sickrage
          image: "linuxserver/sickrage"
          ports:
            - name: sick-port
              containerPort: 8081
          volumeMounts:
            - name: sickrage-config
              mountPath: /config
            - name: sickrage-downloads
              mountPath: /downloads
      volumes:
        - name: sickrage-config
          persistentVolumeClaim:
            claimName: sickrage-config
        - name: sickrage-downloads
          persistentVolumeClaim:
            claimName: sickrage-data
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sickrage
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: sickrage.archifleks.xyz
      http:
        paths:
          - backend:
              serviceName: sickrage
              servicePort: 8081
